--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 .jumbotron {
-    background:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('assets/images/pizza-hero.jpg');
+    background:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/pizza-hero.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
