--- a/assets/css/style-login.css
+++ b/assets/css/style-login.css
@@ -8,7 +8,7 @@ body {
     padding: 0;
     min-height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #4E6C50;
+    background-color: #4e6c50;
     /* background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('assets/images/bg.jpg'); */
     overflow-x: hidden;
 }
@@ -44,15 +44,16 @@ body {
 }
 
 .container {
-    background-color: #FAECD6;
+    background-color: #820000;
     margin-top: 10%;
     border-radius: 20px;
     font-weight: bold;
-    outline: 3px solid #820000;
+    color: white;
 }
 
 form {
     padding: 10px;
+    margin-top: 50px;
 }
 
 .input-group-append i {
@@ -64,13 +65,13 @@ form {
 
 .show-hide {
     background-color: white;
-    outline: 1px solid #820000;
+    outline: 1px solid #4e6c50;
     outline-offset: -1px;
-    color: #820000;
+    color: #4e6c50;
 }
 
 #login {
-    background-color: #820000;
+    background-color: #4e6c50;
     display: block;
     margin: 0 auto;
     border: 1px solid #F2DEBA;
@@ -87,4 +88,9 @@ form {
 h2 {
     display: inline;
     margin: 5px 365px;
+}
+
+.p-0 img {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
